# ember

./: .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  README.md  TODO.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.config/: .clang-format
.github/workflows/: ci.yml  docs.yml
api/: index.html
docs/: api.md  extending.md  index.md  installation.md  usage.md
ember/: __init__.py
ember/_core/: __init__.py  _em_random.pyi  _tensor.pyi  _types.py
ember/loss/: __init__.py  base.py  losses.py
ember/nn/: __init__.py  activations.py  base.py  layers.py
ember/optim/: __init__.py  adam.py  adamw.py  base.py  sgd.py
ember/random/: __init__.py  generators.py
ember/tensor/: __init__.py  tensor.py  tensor_utils.py
examples/: tensors.py
extending/: index.html
installation/: index.html
search/: search_index.json
src/bindings/: _tensor.pyi
src/core/: memory.h  memory_cpu.c  memory_cuda.cu  memory_gpu.cu  tensor_types.h  utils_gpu.cuh
src/random/: distributions.h  distributions_cpu.c  distributions_gpu.cu  random_api.c
src/tensor/: binary.cu  binary_cpu.c  binary_cuda.cu  operators.def  operators.h  operators_cpu.c  operators_gpu.cu  ops.h  ops_cpu.c  ops_cuda.cu  tensor_api.c  tensor_helpers.h
src/tensor/api/: tensor_api.c
src/tensor/bindings/: tensor_api.c
src/tensor/core/: memory.cu  memory.h
src/tensor/macros/: impl_macros_cpu.c
tests/loss/: test_losses.py
tests/nn/: test_activations.py  test_dropout.py  test_linear.py
tests/optim/: test_adam.py  test_adamw.py  test_sgd.py
tests/random/: test_generators.py
tests/tensor/: test_tensor.py
usage/: index.html
