[build-system]
requires = ["scikit-build-core", "cmake", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "ember"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "pre-commit>=4.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "numpy"
]

[tool.scikit-build]
wheel.packages = ["ember"]
cmake.verbose = true
logging.level = "INFO"
